# hw1_c

./: .gitignore  .travis-ci.yml  .travis.yml  CMakeLists.txt  README.md  main.c  test.txt
include/: algorithm.h  io.h
src/: algorithm.c  io.c
test/: CMakeLists.txt  algorithm.cpp
